# aleph-cmake

./: CMakeLists.txt
cmake/: AlephUtils.cmake
cookiecutter-aleph/{{cookiecutter.project_name}}/: .gitignore  CMakeLists.txt  config.cmake.in
cookiecutter-aleph/{{cookiecutter.project_name}}/include/{{cookiecutter.a_parent}}/: {{cookiecutter.a_child}}.hpp
cookiecutter-aleph/{{cookiecutter.project_name}}/include/{{cookiecutter.a_parent}}/{{cookiecutter.a_child}}/: python.hpp
cookiecutter-aleph/{{cookiecutter.project_name}}/python/{{cookiecutter.a_parent}}/{{cookiecutter.a_child}}/: __init__.py
cookiecutter-aleph/{{cookiecutter.project_name}}/src/: lib.cpp
cookiecutter-aleph/{{cookiecutter.project_name}}/tests/cpp/: lib.cpp
cookiecutter/federal/: cookiecutter.json
cookiecutter/federal/{{cookiecutter.project_name}}/: .clang-format  cmake_uninstall.cmake.in  setup.py
cookiecutter/federal/{{cookiecutter.project_name}}/tests/: CMakeLists.txt
cookiecutter/federal/{{cookiecutter.project_name}}/tests/cpp/: lib.cpp
cookiecutter/unitary/: cookiecutter.json
cookiecutter/unitary/{{cookiecutter.project_name}}/: CMakeLists.txt  setup.py
cookiecutter/unitary/{{cookiecutter.project_name}}/include/{{cookiecutter.project_name}}/: python.hpp  {{cookiecutter.project_name}}.hpp
cookiecutter/unitary/{{cookiecutter.project_name}}/src/: lib.cpp  py_ext.cpp  py_init.cpp
cookiecutter/unitary/{{cookiecutter.project_name}}/tests/cpp/: CMakeLists.txt  lib.cpp
cookiecutter/unitary/{{cookiecutter.project_name}}/tests/python/: test_get_version.py
template/: cookiecutter.json
template/{{cookiecutter.project_name}}/: config.cmake.in  pytest.ini  setup.py
(+8 files in other folders)
